mozmeao-fr/bedrock-prod/canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bedrock-prod
    type: web
  name: bedrock-prod-web-canary
  namespace: bedrock-prod
spec:
  progressDeadlineSeconds: 900
  replicas: 2
  selector:
    matchLabels:
      app: bedrock-prod
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bedrock-prod
        type: web
      name: bedrock-prod-web-canary
      namespace: bedrock-prod
    spec:
      imagePullSecrets:
        - name: dockerhub-registry
      containers:
      - args:
        - ./bin/run-prod.sh
        command:
        - /bin/bash
        - -c
        image: mozmeao/bedrock:e6da436be7480263be54a72673159a489b23ee7e
        imagePullPolicy: IfNotPresent
        name: bedrock-prod-web
        ports:
          - containerPort: 8000
        livenessProbe:
          failureThreshold: 4
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
            path: /healthz/
            scheme: HTTP
            port: 8000
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
            path: /readiness/
            scheme: HTTP
            port: 8000
        resources:
          limits:
            cpu: 1500m
            memory: 1000Mi
          requests:
            cpu: 1000m
            memory: 600Mi
        volumeMounts:
          - name: data
            mountPath: /app/data
            readOnly: true
          - name: geoip
            mountPath: /app/geoip
            readOnly: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          hostPath:
            type: Directory
            path: /var/lib/bedrock-prod/data
        - name: geoip
          hostPath:
            type: Directory
            path: /var/lib/bedrock-all/geoip
