mozmeao-fr/bedrock-prod/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: bedrock-prod-data
  namespace: bedrock-prod
  labels:
    k8s-app: bedrock-prod-data
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 5
    type: RollingUpdate
  selector:
    matchLabels:
      name: bedrock-prod-data
  template:
    metadata:
      labels:
        name: bedrock-prod-data
    spec:
      imagePullSecrets:
        - name: dockerhub-registry
      containers:
      - name: bedrock-prod-data
        image: mozmeao/bedrock:14ad6652eb52e70d5845630f38d4f369eca03b71
        imagePullPolicy: IfNotPresent
        args:
          - ./bin/run-file-clock.sh
        command:
          - /bin/bash
          - -c
        resources:
          limits:
            cpu: 350m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 150Mi
        volumeMounts:
        - name: data
          mountPath: /app/data
      priorityClassName: high-priority-preempting
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      volumes:
      - name: data
        hostPath:
          path: /var/lib/bedrock-prod/data
