mozmeao-fr/bedrock-prod/pocket-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bedrock-pocket-prod
    type: web
  name: bedrock-pocket-prod-web
  namespace: bedrock-prod
spec:
  replicas: 20
  selector:
    matchLabels:
      app: bedrock-pocket-prod
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bedrock-pocket-prod
        type: web
      name: bedrock-pocket-prod-web
      namespace: bedrock-prod
    spec:
      imagePullSecrets:
        - name: dockerhub-registry
      containers:
      - args:
        - ./bin/run-prod.sh
        command:
        - /bin/bash
        - -c
        image: mozmeao/bedrock:80b3a74af3781cf0d694f56660997427fbc03321
        imagePullPolicy: IfNotPresent
        name: bedrock-pocket-prod-web
        ports:
          - containerPort: 8000
        livenessProbe:
          failureThreshold: 4
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
            path: /healthz/
            scheme: HTTP
            port: 8000
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
            path: /readiness/
            scheme: HTTP
            port: 8000
        resources:
          limits:
            cpu: 1500m
            memory: 1000Mi
          requests:
            cpu: 1400m
            memory: 900Mi
        volumeMounts:
          - name: data
            mountPath: /app/data
            readOnly: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          hostPath:
            type: Directory
            path: /var/lib/bedrock-prod/data
