mozmeao-fr/bedrock-prod/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: bedrock-prod-ingress
  namespace: bedrock-prod
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: bedrock-prod
    type: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
  name: bedrock-prod
  namespace: bedrock-prod
spec:
  rules:
    - host: "bedrock.prod.fr.moz.works"
      http:
        paths:
          - backend:
              serviceName: bedrock-prod-ingress
              servicePort: 8000
            path: /
    - host: "bedrock-prod.moz.works"
      http:
        paths:
          - backend:
              serviceName: bedrock-prod-ingress
              servicePort: 8000
            path: /
    - host: "www.mozilla.org"
      http:
        paths:
          - backend:
              serviceName: bedrock-prod-ingress
              servicePort: 8000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - "bedrock.prod.fr.moz.works"
          - "bedrock-prod.moz.works"
        secretName: bedrock-tls
